Bug 948838 - Adjust backtracking allocator splitting mechanism for hot vs. cold code, r=sunfish.